added link to make new button

--- a/button.html
+++ b/button.html
@@ -36,6 +36,7 @@
         <![endif]-->
 
     <button id="button" disabled>Button</button>
+    <a href="./index.html">Make a new button (please don't make too many though because if I use up too much of google's storage they will charge me)</a>
 
     <script>
         let database = firebase.database();
