--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <button id="start">Start</button>
     <h1 id='indicator'>Not Recording</h1>
     <p>Pressing the button will immeditely begin a 1 second recording</p>
-    <a href="./index.html">Make a new button</a>
+    <a href="./index">Make a new button</a>
 
     <script src="index.js" async defer></script>
 </body>
