im not good at design

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-    <button id="start">Start</button>
+    <button id="start">Start Recording</button>
     <h1 id='indicator'>Not Recording</h1>
     <p>Pressing the button will immeditely begin a 1 second recording</p>
-    <a href="./">Make a new button</a>
+    <a href="./">Try Again (in case you messed up)</a>
 
     <script src="index.js" async defer></script>
 </body>
