made the button a bit bigger

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
     <a href="./">Try Again (in case you messed up)</a>
 
     <script src="index.js" async defer></script>
+    <style>
+    button{
+        font-size: 2em;
+    }
+    </style>
 </body>
 
 </html>
