--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <button id="start" onclick="buttonSubmit()">Start Recording</button>
     <h1 id='indicator'>Not Recording</h1>
-    <p>Pressing the button will immeditely begin a 1 second recording</p>
+    <p>Pressing the button will immeditely begin a 1 second recording.</p>
     <a href="./">Try Again (in case you messed up)</a>
 
     <script src="index.js" async defer></script>
